--- a/public/index.html
+++ b/public/index.html
@@ -1,58 +1,124 @@
 ﻿<!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NiNi Funny</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NiNi Funny v50</title>
+  <link rel="icon" href="/logo.png" />
+
   <style>
-    :root { --bg:#0e1b12; --card:#ffffff; }
-    html,body{height:100%;margin:0}
+    :root{
+      --card: #ffffff;
+      --ink: #111;
+      --muted: #666;
+      --brand: #f24f7f;
+      /* ảnh nền — nếu cần đổi chỉ cần sửa dòng dưới */
+      --bg-image: url("/assets/images/bg/home.png");
+    }
+
+    *{ box-sizing: border-box; }
+    html, body{ height: 100%; }
     body{
-      display:grid;place-items:center;
-      background: radial-gradient(80% 80% at 50% 10%, #214 0%, #0e1b12 60%);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:#111;
+      margin: 0;
+      color: var(--ink);
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      background: #f3f4f6;
     }
+
+    /* phủ ảnh nền toàn trang */
+    body::before{
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-image: var(--bg-image);
+      background-size: cover;
+      background-position: center;
+      filter: saturate(115%) contrast(105%);
+      opacity: .35;
+      pointer-events: none;
+    }
+
     .card{
-      width:min(880px, 92vw);
-      background:var(--card);
-      border-radius:20px;
-      padding:28px;
-      box-shadow:0 20px 60px rgba(0,0,0,.25);
+      max-width: 980px;
+      width: 92%;
+      margin: 24px auto;
+      padding: 28px;
+      border-radius: 12px;
+      background: var(--card);
+      box-shadow: 0 20px 60px rgba(0,0,0,.12);
     }
-    h1{margin:.2rem 0 1rem;font-size:2rem}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:20px}
-    .cta a{display:inline-block;margin:.25rem .35rem;padding:.7rem 1.1rem;border-radius:12px;background:#111;color:#fff;text-decoration:none}
-    code{background:#f2f4f7;padding:.2rem .4rem;border-radius:6px}
-    @media (max-width:720px){.grid{grid-template-columns:1fr}}
+
+    .topbar{ display:flex; align-items:center; gap:12px; margin-bottom: 8px; }
+    .topbar img{ height: 32px; }
+    .brand{ font-weight: 700; font-size: 22px; }
+
+    .hints{ font-size: 14px; color: var(--muted); }
+    .hints ul{ padding-left: 18px; margin: 6px 0; }
+
+    .btns{ display:flex; flex-wrap:wrap; gap: 12px; margin-top: 12px; }
+    .btn{
+      display:inline-block; text-decoration:none;
+      padding:.55rem 1rem; border-radius:10px;
+      background:#111; color:#fff; font-weight:600;
+      box-shadow: 0 8px 20px rgba(0,0,0,.18);
+    }
+    .btn.ghost{ background:#fff; color:#111; border:1px solid rgba(0,0,0,.1); }
+    .btn.brand{ background: var(--brand); }
+
+    footer{ margin-top: 18px; font-size: 12px; color: #555; }
+    code{ background: rgba(0,0,0,.05); padding:.15rem .4rem; border-radius:6px; }
   </style>
 </head>
 <body>
   <main class="card">
-    <h1>NiNi Funny v50</h1>
-    <p>Trang tĩnh được phục vụ từ thư mục <code>public/</code>. API chạy dưới <code>/.netlify/functions/*</code>.</p>
-    <div class="grid">
-      <section>
-        <h3>Kiểm tra môi trường</h3>
-        <p><a href="/.netlify/functions/env-check">/.netlify/functions/env-check</a></p>
-        <p>Nếu các cờ (PROJECT_ID/CLIENT_EMAIL/STORAGE_BUCKET/PRIVATE_KEY) là <code>true</code> thì ENV OK.</p>
-      </section>
-      <section>
-        <h3>Gợi ý cấu hình Netlify</h3>
-        <ul>
-          <li><b>Publish directory:</b> <code>public</code></li>
-          <li><b>Build command:</b> <code>corepack enable && pnpm i</code></li>
-          <li><b>Functions dir:</b> <code>netlify/functions</code></li>
-        </ul>
-      </section>
+    <header class="topbar">
+      <img src="/logo.png" alt="NiNi logo" />
+      <div class="brand">NiNi Funny </div>
+    </header>
+
+    <section class="hints">
+      <p>Trang tĩnh được phục vụ từ thư mục <code>public/</code>. API chạy dưới <code>/.netlify/functions/*</code>.</p>
+      <p>
+        <a href="/.netlify/functions/env-check">/.netlify/functions/env-check</a>
+      </p>
+      <ul>
+        <li><b>Publish directory:</b> <code>public</code></li>
+        <li><b>Build command:</b> <code>npm run build</code> (hoặc chỉ <code>echo</code> cho static)</li>
+        <li><b>Functions dir:</b> <code>netlify/functions</code></li>
+      </ul>
+    </section>
+
+    <div class="btns">
+      <a class="btn brand" href="/home">Home</a>
+      <a class="btn ghost" href="/storybook">Storybook</a>
+      <a class="btn ghost" href="/games">Games</a>
+      <a class="btn ghost" href="/videos">Videos</a>
+      <a class="btn ghost" href="/shop">Shop</a>
     </div>
-    <div class="cta">
-      <a href="/">Home</a>
-      <a href="/storybook">Storybook</a>
-      <a href="/games">Games</a>
-      <a href="/videos">Videos</a>
-      <a href="/shop">Shop</a>
-    </div>
+
+    <footer>
+      Ảnh nền đang dùng: <code>/assets/images/bg/home.png</code>. Logo: <code>/logo.png</code>.
+      Nếu xem trên môi trường khác mà ảnh chưa hiện, thử đổi thành
+      <code>url("./assets/images/bg/home.png")</code> trong biến <code>--bg-image</code>.
+    </footer>
   </main>
+
+  <!-- Firebase SDKs (browser) -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script>
+    // THAY bằng cấu hình Web App của bạn (không dùng private key)
+    const firebaseConfig = {
+      apiKey: "AIzaSyBdaMS7aI03wHLhi1Md2QDitJFkA61IYUU",
+      authDomain: "nini-8f3d4.firebaseapp.com",
+      projectId: "nini-8f3d4",
+      storageBucket: "nini-8f3d4.firebasestorage.app",
+      appId: "1:991701821645:web:fb21c357562c6c801da184"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <!-- Code front-end của bạn (gọi API, log activity, leaderboard…) -->
+  <script type="module" src="/js/main.js"></script>
 </body>
 </html>
